# CLI_AL

./: .env.example  .gitignore  LICENSE  PROJECT_PLAN.md  README.md  README_IMPLEMENTATION.md  app.py  llm_service.py  package-lock.json  package.json  prompts.py  rag_service.py  render.yaml  requirements.txt  run-dev.bat  혼인신고서.hwpx
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: keepalive.yml
Backend/: main.py
Frontend/: index.html
backend/: .env.example  pyproject.toml  requirements.txt  test_llm.py
backend/app/: __init__.py  config.py  document_parser.py  main.py  models.py  services.py  settings.py
backend/app/llm/: base.py  factory.py  mock.py  nim.py
backend/app/models/: schemas.py
backend/app/prompts/: __init__.py  selection.py
backend/app/rag/: __init__.py  db.py  indexer.py  retriever.py  store.py
backend/app/routers/: health.py  history.py  law.py  parse.py  rewrite.py
backend/app/services/: algorithms.py  cache_service.py  history_service.py  law_client.py  prompt_loader.py  rate_limit.py  rewrite_service.py  supabase_client.py  upstage_client.py
backend/scripts/: build_rag_seed.py
backend/tests/: test_health.py  test_prompt_loader.py
docs/: DEPLOY.md  SETUP.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Dropzone.tsx  (+17 more)
infra/: Makefile  dev.ps1
supabase/: README.md
templates/: base.html  civil.html  contract.html  index.html  landing.html  procedure.html  rights.html  welfare.html
(+24 files in other folders)
